[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/GUI/DEBUG/GUI.gd" type="Script" id=1]

[node name="DebugGUI" type="Control"]
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ShowDebugButtonsButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -35.0
margin_right = 60.0
margin_bottom = -15.0
text = "Show"

[node name="DebugButtons" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
anchor_bottom = 1.0
margin_right = 211.0

[node name="HideTween" type="Tween" parent="DebugButtons"]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="DebugButtons"]
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VList" type="VBoxContainer" parent="DebugButtons/MarginContainer"]
margin_right = 191.0
margin_bottom = 64.0

[node name="PursueToggle" type="CheckButton" parent="DebugButtons/MarginContainer/VList"]
visible = false
margin_right = 191.0
margin_bottom = 40.0
text = "Pursue (p)"

[node name="PauseMovementToggle" type="CheckButton" parent="DebugButtons/MarginContainer/VList"]
margin_right = 191.0
margin_bottom = 40.0
text = "Pause Movement"

[node name="HideButton" type="Button" parent="DebugButtons/MarginContainer/VList"]
margin_top = 44.0
margin_right = 191.0
margin_bottom = 64.0
text = "Hide"

[connection signal="pressed" from="ShowDebugButtonsButton" to="." method="_on_ShowDebugButtonsButton_pressed"]
[connection signal="pressed" from="DebugButtons/MarginContainer/VList/PursueToggle" to="." method="_on_PursueToggle_pressed"]
[connection signal="toggled" from="DebugButtons/MarginContainer/VList/PauseMovementToggle" to="." method="_on_PauseMovementToggle_toggled"]
[connection signal="pressed" from="DebugButtons/MarginContainer/VList/HideButton" to="." method="_on_HideButton_pressed"]
